fix mobile overlap

--- a/front-end/src/styles/App.scss
+++ b/front-end/src/styles/App.scss
@@ -10,7 +10,8 @@ $button-size: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  // height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   max-width: 100%;
   margin: 0;
   justify-content:space-between;
@@ -83,8 +84,10 @@ html {
   left: 0;
   right: 0;
   bottom: 0;
-  min-height: 100vh;
-  position:absolute;
+  // min-height: 100vh;
+  min-height: 100%;
+  // position:absolute;
+  position: relative;
   text-align: center;
   // background: inherit;
   background-color: inherit;
@@ -164,13 +167,14 @@ input {
   position: relative;
   width: 100%;
   height: 56px;
-  position: relative;
+  // position: relative;
   margin-top: 20px;
   left: 0;
   right: 0;
   bottom: 0;
   margin: 0;
   padding: 0;
+  padding-top: calc(env(safe-area-inset-bottom) + 16px);
   background-color: inherit;
 
   p {
@@ -226,7 +230,8 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  // height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0;
   justify-content:center;
@@ -286,6 +291,8 @@ input {
   display: flex;
   align-items: center;
   justify-content: right;
+  // padding-bottom: env(safe-area-inset-bottom, 12px);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 16px);
 
   @include mixins.responsive ('mobile') {
     margin-bottom: 8px;
